src/objects/DaScoopComposer__Lead_Match__c.object
<CustomObject>
    <description>Matches Leads and Accounts in a many-to-many relationship</description>
    <fields>
        <fullName>DaScoopComposer__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matching Leads</relationshipLabel>
        <relationshipName>Lead_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Owner__c</fullName>
        <formula>DaScoopComposer__AccountId__r.Owner.FirstName &amp; &apos; &apos; &amp;  DaScoopComposer__AccountId__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Status_Inferred__c</fullName>
        <formula>DaScoopComposer__AccountId__r.DaScoopComposer__Inferred_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status (Inferred)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Convert__c</fullName>
        <formula>HYPERLINK(
&apos;/lead/leadconvert.jsp?id=&apos; &amp; DaScoopComposer__LeadId__r.Id &amp; &apos;&amp;acclkid_lkid=&apos; &amp; DaScoopComposer__AccountId__r.Id &amp; &apos;&amp;accid=&apos; &amp; DaScoopComposer__AccountId__r.Name,
&apos;Convert&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Convert the lead to the the account</inlineHelpText>
        <label>Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Dedupe_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Dedupe Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Converted__c</fullName>
        <formula>DaScoopComposer__LeadId__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Merged_Lead__c</fullName>
        <description>Dedupe_Key__c is the AccountId + the LeadId. It is set upon creation of the lead match record. If the lead is deleted or merged, the LeadId__c will be blank and the formula will evaluate to FALSE</description>
        <formula>AND(
NOT(ISNULL(DaScoopComposer__LeadId__c)),
NOT(CONTAINS(DaScoopComposer__Dedupe_Key__c, DaScoopComposer__LeadId__c))
)</formula>
        <inlineHelpText>Indicates that the lead match no longer points to the lead it was originally linked to. This happens after the original lead was merged to a duplicate lead.</inlineHelpText>
        <label>Is Merged Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Matching Accounts</relationshipLabel>
        <relationshipName>Lead_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Created_Date__c</fullName>
        <formula>TEXT(DATEVALUE(DaScoopComposer__LeadId__r.CreatedDate)) &amp; &apos;, &apos; &amp;  DaScoopComposer__LeadId__r.CreatedBy.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__LeadId__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Key__c</fullName>
        <label>Lead Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Owner__c</fullName>
        <formula>DaScoopComposer__LeadId__r.Owner:Queue.QueueName &amp;  DaScoopComposer__LeadId__r.Owner:User.FirstName &amp; &apos; &apos; &amp; DaScoopComposer__LeadId__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Source__c</fullName>
        <formula>TEXT(DaScoopComposer__LeadId__r.LeadSource)</formula>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Status__c</fullName>
        <formula>TEXT(DaScoopComposer__LeadId__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Matching_Company_Name__c</fullName>
        <label>Matching Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Matching_Email__c</fullName>
        <label>Matching Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Matching_Score__c</fullName>
        <label>Matching Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Matching_Website__c</fullName>
        <label>Matching Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Match</label>
    <nameField>
        <label>Match Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>